too much fixes

--- a/computer_shop_front/src/components/productCard/productCard.css
+++ b/computer_shop_front/src/components/productCard/productCard.css
@@ -43,6 +43,7 @@
     white-space: nowrap;
   }
   .productStock{
+    width: fit-content;
     margin-bottom: -3px;
     font-size: 10px;
     color: red;
