--- a/computer_shop_front/src/pages/newProduct/newProduct.css
+++ b/computer_shop_front/src/pages/newProduct/newProduct.css
@@ -126,3 +126,9 @@ input[type=number] {
     align-self: center;
     margin-top: 7vh;
 }
+.wrapperClassName{
+    width: 39.1vw;
+}
+.public-DraftEditor-content{
+    height: 18vh;
+}
